Revision based on review from @adutra